# backend/src/routes/userRoutes.ts
@@ -8,6 +8,7 @@ router.get("/", userController.getAllUsers);
 router.get("/demo", userController.getDemoUser);
 router.get("/:email", userController.getUserByEmail);
 router.get("/:userId/sleep", sleepController.getSleepLogsByUserId);
+router.get("/:userId/sleep/recent", sleepController.getMostRecentSleepLog);
 router.get("/:userId/sleep/:date", sleepController.getSleepLogByDate);
 
 export default router;
